Fixed sidenav for customer

--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -1,6 +1,6 @@
 <nav class="red darken-1 lighten-1">
     <div class="nav-wrapper">
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <a (click)="changeBool()" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="left hide-on-med-and-down">
             <li><a routerLink="/"><i class="material-icons left">home</i> Home</a></li>
         </ul>
@@ -13,7 +13,7 @@
     </div>
 </nav>
 
-<ul class="sidenav" id="mobile-demo">
+<ul class="sidenav" id="mobile-demo" [ngClass]="{'sideNavShow':bool}">
     <li><a routerLink="../"><i class="material-icons left">home</i> Home</a></li>
     <li><a routerLink="../buyer"><i class="material-icons left">restaurant_menu</i>Menu</a></li>
     <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>View Orders</a></li>
@@ -29,3 +29,4 @@
     </li>
     <li><a><i class="material-icons left">supervisor_account</i>Contact Us</a></li>
 </ul>
+<div class="sidenav-overlay" [ngClass]="{'sidenav-overlay-active':bool}" (click)="changeBool()"></div>
