--- a/src/app/options/options.component.css
+++ b/src/app/options/options.component.css
@@ -1,3 +1,34 @@
 .brand-logo {
     margin-left: .5rem;
 }
+
+.sidenav {
+    transition: ease-in-out 0.3s;
+    width: 85vw;
+    background-color: burlywood;
+}
+
+.sideNavShow {
+    transform: translateX(0%);
+}
+
+.sidenav-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    height: 120vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 997;
+    display: none;
+}
+
+nav>div>a:hover {
+    cursor: pointer !important;
+}
+
+.sidenav-overlay-active {
+    display: block;
+    opacity: 1;
+}
