Fixed sidenav for seller

--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -2,7 +2,7 @@
     <div class="nav-wrapper">
         <a (click)="changeBool()" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="left hide-on-med-and-down">
-            <li><a routerLink="/"><i class="material-icons left">home</i> Home</a></li>
+            <li><a routerLink=""><i class="material-icons left">home</i> Home</a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
             <li><a routerLink="../buyer"><i class="material-icons left">restaurant_menu</i>Menu</a></li>
