Added payment in sidenav

--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -17,6 +17,7 @@
     <li><a routerLink="../"><i class="material-icons left">home</i> Home</a></li>
     <li><a routerLink="../buyer"><i class="material-icons left">restaurant_menu</i>Menu</a></li>
     <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>View Orders</a></li>
+    <li><a routerLink="../payment"><i class="material-icons left">payment</i>Payment</a></li>
     <li>
         <div class="divider"></div>
     </li>
