--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -1,9 +1,7 @@
 <nav class="red darken-1 lighten-1">
     <div class="nav-wrapper">
         <a (click)="changeBool()" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        <ul class="left hide-on-med-and-down">
-            <li><a routerLink=""><i class="material-icons left">home</i> Home</a></li>
-        </ul>
+        <a routerLink="" class="brand-logo"><img class="responsive-image" src="../../assets/svg/icon.svg" /><span>Frezzo</span></a>
         <ul class="right hide-on-med-and-down">
             <li><a routerLink="../buyer"><i class="material-icons left">restaurant_menu</i>Menu</a></li>
             <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>View Orders</a></li>
