--- a/src/app/seller-navbar/seller-navbar.component.html
+++ b/src/app/seller-navbar/seller-navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="red darken-1 lighten-1">
     <div class="nav-wrapper">
         <a (click)="changeBool()" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        <a routerLink="../seller" class="brand-logo">Frezzo</a>
+        <a routerLink="../seller" class="brand-logo"><img class="responsive-image" src="../../assets/svg/icon.svg" /><span>Frezzo</span></a>
         <ul class="right hide-on-med-and-down">
             <li><a routerLink="../addProduct"><i class="material-icons left">add_box</i>Add Product</a></li>
             <li><a routerLink="../toPrepare"><i class="material-icons left">shopping_cart</i>Order to Prepare</a></li>
